@@ -8,6 +8,8 @@ CHANGELOG
 2024/01/09:
 - TestEngine: Added ImGuiTestContext::KeySetEx() to manipulate keys with precise timings.
   (most other functions add yields to accomodate for common use cases).
+- app_minimal: Added a building batch file to provide an alternative building reference.
+- app_minimal: Removed misleading optional dependency on implot.
 
 2024/01/08:
 - TestEngine: Avoid allocations in IM_CHECK_XX macros.
